--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <script type="text/javascript" src="jquery.tinycarousel.min.js"></script>
     <link rel="stylesheet" href="fancybox/jquery.fancybox.css" />
     <script src="fancybox/jquery.fancybox.js"></script>
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-    <script src="wow.min.js"></script> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <script src="wow.min.js"></script>
     <title>Royal Villas</title>
 </head>
 <body>
@@ -507,10 +507,10 @@
         var fondomodal = document.getElementById("modal");
         // var abrirbtn = document.getElementById("btnAbrir");
         var cerrarbtn = document.getElementById("cerrar");
-        // function tiempo(){
-        //     fondomodal.style.display = "block";
-        // }
-        // setTimeout(tiempo, 5000);
+        function tiempo(){
+        	fondomodal.style.display = "block";
+        }
+        setTimeout(tiempo, 5000);
         // abrirbtn.onclick = function(){
         //     fondomodal.style.display = "block";
         // };
